--- a/app/views/caboose_rets/residential/admin_edit.html.erb
+++ b/app/views/caboose_rets/residential/admin_edit.html.erb
@@ -222,7 +222,7 @@ p = @property
 <tr><td>year_built                    </td><td><%= p.year_built                     %></td></tr>
 <tr><td>year_built_source             </td><td><%= p.year_built_source              %></td></tr>
 <tr><td>zip                           </td><td><%= p.zip                            %></td></tr>
-</table>
+</table><br />
 
 <% content_for :caboose_js do %>
 <%= javascript_include_tag "caboose/model/all" %>
