--- a/app/views/caboose_rets/agents/admin_edit_contact_info.html.erb
+++ b/app/views/caboose_rets/agents/admin_edit_contact_info.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Agent</h1>
-<%= render :partial => 'agents/admin_top_nav' %>
+<%= render :partial => 'caboose_rets/agents/admin_top_nav' %>
 
 <div id='agent_<%= @agent.id %>_contact_info' ></div>
 
