--- a/app/views/caboose_rets/land/admin_index.html.erb
+++ b/app/views/caboose_rets/land/admin_index.html.erb
@@ -1,19 +1,15 @@
-<h1>Commercial Properties</h1>
+<h1>Land Properties</h1>
 
-<% content_for :caboose_css do %>
 <style type='text/css'>
 #search_form_wrapper { margin-bottom: 10px; position: absolute; top:0; right: 0; }
 </style>
-<% end %>
 
 <div id='search_form_wrapper'>
-  <form action='/admin/commercial' method='get' id='search_form'>
+  <form action='/admin/land' method='get' id='search_form'>
     <input type='text' name='mls_acct' placeholder='MLS #' value="<%= @gen.params['mls_acct'] %>" style='width: 100px;' />    
     <input type='submit' value='Search' />
   </form>
 </div>
-
-<p><input type='button' value='New Custom Commercial Property' onclick="window.location='/admin/commercial/new';" />
 
 <table class='data' id='properties_table'>
   <tr>
@@ -28,7 +24,7 @@
 <% @properties.each do |p| %>
   <% agent = p.agent %>
   <% office = p.office %>
-  <tr onclick="window.location='/admin/commercial/<%= p.mls_acct %>/edit';">
+  <tr onclick="window.location='/admin/land/<%= p.mls_acct %>/edit';">
     <td><%= raw p.mls_acct %></td>
     <td><%= raw "#{p.street_num} #{p.street_name}, #{p.city}" %></td>
     <td><%= p.agent ? "#{agent.first_name} #{agent.last_name}" : p.la_code %></td>
