--- a/app/views/caboose_rets/media/admin_property_media.html.erb
+++ b/app/views/caboose_rets/media/admin_property_media.html.erb
@@ -1,6 +1,7 @@
-<h1>Media</h1>
+<h1>Property Images and Files</h1>
 
 <p>MLS#: <%= @property.mls_acct %></p>
+<p><input type='button' value='< Back to Property' onclick="window.location='/admin<%= @property.url %>/edit';" /></p>
 
 <h2>Images</h2>
 <div id='new_image'></div>
