--- a/app/views/caboose_rets/commercial/admin_index.html.erb
+++ b/app/views/caboose_rets/commercial/admin_index.html.erb
@@ -13,7 +13,10 @@
   </form>
 </div>
 
-<p><input type='button' value='New Custom Commercial Property' onclick="window.location='/admin/commercial/new';" />
+<p>
+  <a href='/admin/rets/import'>Import new property from MLS</a> | 
+  <a href='/admni/commercial/new'>New custom commercial property</a>
+</p>
 
 <table class='data' id='properties_table'>
   <tr>
