--- a/app/views/caboose_rets/land/admin_index.html.erb
+++ b/app/views/caboose_rets/land/admin_index.html.erb
@@ -11,6 +11,8 @@
   </form>
 </div>
 
+<p><a href='/admin/rets/import'>Import new property from MLS</a></p>
+
 <table class='data' id='properties_table'>
   <tr>
     <%= raw @gen.sortable_table_headings({
