--- a/app/views/caboose_rets/properties/property_not_exists.html.erb
+++ b/app/views/caboose_rets/properties/property_not_exists.html.erb
@@ -1,15 +1,14 @@
 <div class="l-wrapper">
   <div class="l-section">
-    <div class="l-sidebar-border inflate-tenor-baritone">      
+    <div class="l-sidebar-border inflate-tenor-baritone">
       <div class="sidebar-body">
-                
+
         <h4 class="h-type-standard h-type-highlight h-type-caps">Sorry</h4>
-        <p>A property with MLS #<%= @mls_acct %> doesn't exist.</p> 
-        
+        <p>A property with MLS #<%= @mls %> doesn't exist.</p>
+
       </div> <!-- .sidebar-body -->
     </div> <!-- .l-sidebar -->
   </div> <!-- .body-section -->
 </div> <!-- .l-wrapper -->
 
 <div class="body-sink"></div>
-
