--- a/app/views/caboose/blocks/_layout_rets.html.erb
+++ b/app/views/caboose/blocks/_layout_rets.html.erb
@@ -9,19 +9,19 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
-    <meta http-equiv="content-language" content="en">    
+    <meta http-equiv="content-language" content="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= raw page.head_title %></title>
     <% desc = page.meta_description ? page.meta_description : page.head_title %>
-    <% domain = site.primary_domain.domain %>    
+    <% domain = site.primary_domain.domain %>
     <meta name="description" content="<%= desc %>" />
     <meta property="og:title" content="<%= page.title %>" />
     <meta property="og:site_name" content="<%= site.description %>"/>
-    <meta property="og:description" content="<%= desc %>" />            
+    <meta property="og:description" content="<%= desc %>" />
     <%= raw css %>
     <%= raw csrf_meta_tags %>
   </head>
-  <body>    
+  <body>
     <div class="container" id='block_<%= block.id %>'>
       <!--[if lt IE 7]>
         <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
@@ -32,6 +32,9 @@ url = request.original_fullpath
 if    url =~ /^\/residential\/\d(.*?)$/      %><% Caboose.log("Rendering rets_residential_details" ) %><%= block.partial('rets_residential_details' , local_assigns) %><%
 elsif url =~ /^\/residential\/search(.*?)$/  %><% Caboose.log("Rendering rets_residential_index"   ) %><%= block.partial('rets_residential_index'   , local_assigns) %><%
 elsif url =~ /^\/residential(.*?)$/          %><% Caboose.log("Rendering rets_residential_index"   ) %><%= block.partial('rets_residential_index'   , local_assigns) %><%
+elsif url =~ /^\/commercial\/\d(.*?)$/       %><% Caboose.log("Rendering rets_property_details"  ) %><%= block.partial('rets_property_details'  , local_assigns) %><%
+elsif url =~ /^\/commercial\/search(.*?)$/   %><% Caboose.log("Rendering rets_properties_index"    ) %><%= block.partial('rets_properties_index'    , local_assigns) %><%
+elsif url =~ /^\/commercial(.*?)$/           %><% Caboose.log("Rendering rets_properties_index"    ) %><%= block.partial('rets_properties_index'    , local_assigns) %><%
 elsif url =~ /^\/commercial\/\d(.*?)$/       %><% Caboose.log("Rendering rets_commercial_details"  ) %><%= block.partial('rets_commercial_details'  , local_assigns) %><%
 elsif url =~ /^\/commercial\/search(.*?)$/   %><% Caboose.log("Rendering rets_commercial_index"    ) %><%= block.partial('rets_commercial_index'    , local_assigns) %><%
 elsif url =~ /^\/commercial(.*?)$/           %><% Caboose.log("Rendering rets_commercial_index"    ) %><%= block.partial('rets_commercial_index'    , local_assigns) %><%
@@ -51,6 +54,6 @@ elsif url =~ /^\/saved-properties(.*?)$/     %><% Caboose.log("Rendering rets_sa
 end
 %>
     </div>
-  <%= raw js %>  
+  <%= raw js %>
   </body>
 </html>
