--- a/app/views/caboose_rets/properties/_search_form.html.erb
+++ b/app/views/caboose_rets/properties/_search_form.html.erb
@@ -1,8 +1,8 @@
 
-<label onclick="toggle_slide('residential_search_form');">Search Form</label>
+<label onclick="toggle_slide('property_search_form');">Search Form</label>
 
-<div class='search_form' id='residential_search_form' style='display: none;'>
-  <form action="/residential" method="get" id='search_form'>
+<div class='search_form' id='property_search_form' style='display: none;'>
+  <form action="/property" method="get" id='search_form'>
     <ul>
       <li class='price_range'>
         <label>Price Range</label>
@@ -12,7 +12,7 @@
             <% (10000..50000).step(10000) do |x|   %><option value="<%= x %>"><%= number_to_currency(x, :precision => 0) %></option><% end %>
             <% (100000..950000).step(50000) do |x| %><option value="<%= x %>"><%= number_to_currency(x, :precision => 0) %></option><% end %>
             <option value="1000000">$1,000,000+</option>
-          </select>        
+          </select>
           <span>To</span>
           <select id="current_price_lte" name="current_price_lte">
             <option value="" selected="selected">Select</option>
@@ -22,22 +22,22 @@
           </select>
         </div>
       </li>
-      
+
       <li class='bedroom_count'>
         <label>How Many Beds?</label>
         <div>
           <select id="bedrooms_gte" name="bedrooms_gte">
             <option value="">Any</option>
-            <% (1..5).each do |x| %><option value="<%= x %>"><%= x %></option><% end %>            
-          </select>                        
-          <span>To</span>            
+            <% (1..5).each do |x| %><option value="<%= x %>"><%= x %></option><% end %>
+          </select>
+          <span>To</span>
           <select id="bedrooms_lte" name="bedrooms_lte">
             <option value="">Any</option>
             <% (1..5).each do |x| %><option value="<%= x %>"><%= x %></option><% end %>
           </select>
         </div>
       </li>
-        
+
       <li class='property_type'>
         <label>Property Type</label>
         <div>
@@ -47,40 +47,40 @@
           </select>
         </div>
       </li>
-      
-      <li class='mls_acct'>      
+
+      <li class='mls'>
         <label>MLS #</label>
-        <div><input class="search-input" id="mls_acct" name="mls_acct" type="text" placeholder="Enter Here" /></div>
+        <div><input class="search-input" id="mls" name="mls" type="text" placeholder="Enter Here" /></div>
       </li>
-      
-      <li class='square_footage'>            
+
+      <li class='square_footage'>
         <label>Square Feet</label>
         <div>
           <select id="tot_heat_sqft_gte" name="tot_heat_sqft_gte">
             <option value="" selected="selected">Select</option>
             <% (250..4000).step(250) do |x| %><option value="<%= x %>"><%= x %></option><% end %>
-          </select>                      
+          </select>
           <span>To</span>
           <select id="tot_heat_sqft_lte" name="tot_heat_sqft_lte">
             <option value="" selected="selected">Select</option>
-            <% (250..4000).step(250) do |x| %><option value="<%= x %>"><%= x %></option><% end %>            
+            <% (250..4000).step(250) do |x| %><option value="<%= x %>"><%= x %></option><% end %>
           </select>
         </div>
       </li>
-      
-      <li class='neighborhood'>        
-        <label>Neighborhood</label>          
-        <div>            
+
+      <li class='neighborhood'>
+        <label>Neighborhood</label>
+        <div>
           <select id="subdivision" name="subdivision">
             <option value="">Neighborhood</option>
             <% @subdivisions.each do |f| %><option value="<%= f %>"><%= f.titleize %></option><% end %>
           </select>
         </div>
       </li>
-      
+
       <li class='elem_school'>
         <label>Elementary School</label>
-        <div>            
+        <div>
           <select id="elem_school" name="elem_school">
             <option value="">Select</option>
             <% @elem_schools.each do |f| %><option value="<%= f %>"><%= f.titleize %></option><% end %>
@@ -89,15 +89,15 @@
       </li>
 
       <li class='middle_school'>
-        <label>Middle School</label>          
+        <label>Middle School</label>
         <div>
           <select id="middle_school" name="middle_school">
             <option value="">Select</option>
-            <% @middle_schools.each do |f| %><option value="<%= f %>"><%= f.titleize %></option><% end %>                
+            <% @middle_schools.each do |f| %><option value="<%= f %>"><%= f.titleize %></option><% end %>
           </select>
         </div>
       </li>
-      
+
       <li class='high_school'>
         <label>High School</label>
         <div>
@@ -108,38 +108,38 @@
         </div>
       </li>
 
-      <li class='street'>        
-        <label>Street</label>          
+      <li class='street'>
+        <label>Street</label>
         <div><input id="street_name_like" name="street_name_like" type="text" placeholder="Street" /></div>
       </li>
-      
+
       <li class='remarks'>
         <label>Search Keyword</label>
         <div><input id="remarks" name="remarks_like" type="text" placeholder="Keywords" /></div>
       </li>
-      
+
       <li class='waterfront'>
         <label>Waterfront</label>
         <div>
-          <select id="waterfront" name="waterfront">
+          <select id="Waterfronts" name="Waterfronts">
             <option value="" selected="selected">Select</option>
             <option value="Y">Yes</option>
-            <option value="">No</option>        
+            <option value="">No</option>
           </select>
         </div>
       </li>
-      
+
       <li class='golf'>
         <label class="h-float-right">Golf Course</label>
-        <div>          
+        <div>
           <select id="ftr_lotdesc_like" name="ftr_lotdesc_like">
             <option value="" selected="selected">Select</option>
             <option value="golf">Yes</option>
-            <option value="">No</option>        
+            <option value="">No</option>
           </select>
         </div>
       </li>
-      
+
       <li class='latest'>
         <label>Show listings created when?</label>
         <div>
@@ -150,7 +150,7 @@
             <% d = DateTime.now - 30 %><option value="<%= d.strftime('%F') %>">In the past month</option>
           </select>
         </div>
-      </li>                    
+      </li>
 
       <li class='property_status'>
         <label>Property Status</label>
@@ -162,8 +162,8 @@
         </div>
       </li>
     </ul>
-    
-    <p><input type="submit" value="Search" onclick='search_properties(); return false;' /></p>      
+
+    <p><input type="submit" value="Search" onclick='search_properties(); return false;' /></p>
   </form>
 </div>
 
@@ -180,18 +180,18 @@ function input_val(el) {
 }
 function search_properties() {
   data = []
-  $('#search_form input'  ).each(function(i, el) { v = input_val(el); if (v) data[data.length] = v; });  
+  $('#search_form input'  ).each(function(i, el) { v = input_val(el); if (v) data[data.length] = v; });
   $('#search_form select' ).each(function(i, el) { v = input_val(el); if (v) data[data.length] = v; });
   data = data.join('&');
   if (data.length > 0)
-    data = "?" + data    
-  window.location = '/residential' + data
+    data = "?" + data
+  window.location = '/property' + data
 }
 
 function toggle_slide(el)
 {
   var div = $('#' + el);
-  if (div.is(":visible")) 
+  if (div.is(":visible"))
     div.slideUp();
   else
     div.slideDown();
