--- a/app/views/caboose_rets/properties/admin_index.html.erb
+++ b/app/views/caboose_rets/properties/admin_index.html.erb
@@ -1,12 +1,12 @@
-<h1>Multi-Family Properties</h1>
+<h1>Properties</h1>
 
 <style type='text/css'>
 #search_form_wrapper { margin-bottom: 10px; position: absolute; top:0; right: 0; }
 </style>
 
 <div id='search_form_wrapper'>
-  <form action='/admin/multi-family' method='get' id='search_form'>
-    <input type='text' name='mls_acct' placeholder='MLS #' value="<%= @gen.params['mls_acct'] %>" style='width: 100px;' />    
+  <form action='/admin/property' method='get' id='search_form'>
+    <input type='text' name='mls' placeholder='MLS #' value="<%= @gen.params['mls'] %>" style='width: 100px;' />
     <input type='submit' value='Search' />
   </form>
 </div>
@@ -16,8 +16,8 @@
 <table class='data' id='properties_table'>
   <tr>
     <%= raw @gen.sortable_table_headings({
-				'mls_acct'                => 'MLS #',
-				'street_num, street_name'	=> 'Address',
+				'mls'                     => 'MLS #',
+				'street_number, street_name'	=> 'Address',
 				'la_code'                 => 'Agent',
 				'lo_code'                 => 'Office'
 			})
@@ -26,11 +26,11 @@
 <% @properties.each do |p| %>
   <% agent = p.agent %>
   <% office = p.office %>
-  <tr onclick="window.location='/admin/multi-family/<%= p.mls_acct %>/edit';">
-    <td><%= raw p.mls_acct %></td>
-    <td><%= raw "#{p.street_num} #{p.street_name}, #{p.city}" %></td>
+  <tr onclick="window.location='/admin/property/<%= p.mls %>/edit';">
+    <td><%= raw p.mls %></td>
+    <td><%= raw "#{p.street_number} #{p.street_name}, #{p.city}" %></td>
     <td><%= p.agent ? "#{agent.first_name} #{agent.last_name}" : p.la_code %></td>
-    <td><%= p.office ? office.lo_name : p.lo_code %></td>    
+    <td><%= p.office ? office.lo_name : p.lo_code %></td>
   </tr>
 <% end %>
 </table>
@@ -39,7 +39,7 @@
 
 <% content_for :caboose_js do %>
 <script type='text/javascript'>
-$(document).ready(function() { 
+$(document).ready(function() {
   var modal = new CabooseModal(800);
 });
 </script>
