--- a/app/views/caboose_rets/properties/test_form.html.erb
+++ b/app/views/caboose_rets/properties/test_form.html.erb
@@ -1,4 +1,4 @@
-<form action='/residential/test' method='post' enctype="multipart/form-data">
+<form action='/property/test' method='post' enctype="multipart/form-data">
 <input type='file' name='myimage' />
 <input type='submit' value='Go' />
 </form>
