--- a/app/views/caboose_rets/properties/details.html.erb
+++ b/app/views/caboose_rets/properties/details.html.erb
@@ -1,42 +1,44 @@
 <div class="residential-details-wrapper constrain">
 	<div class="main">
-		<% if @property.images && @property.images.count > 0 %>
-			<div class="gallery-wrapper">
+		<div class="gallery-wrapper">
+			<% if @property.images && @property.images.count > 0 %>
 				<section>
 					<h2 class="section-title">Photo Gallery</h2>
 					<div class="image-holder">
-						<img src="<%= @property.images.first.image_url(:large) %>" alt="Featured Image" />
+						<% first_image = @property.images.first %>
+						<% m = Caboose::Media.where(:id => first_image.media_id).first if first_image && !first_image.media_id.blank? %>
+						<img src="<%= m.image.url(:large) %>" alt="<%= first_image.media_remarks %>" />
 					</div>
-					<%= render :partial => "caboose/blocks/coastal/image_gallery", :locals => {:property => @property} %>
+					<%= render :partial => "caboose/blocks/grantdickey/image_gallery", :locals => {:property => @property} %>
 				</section>
-				<% if !@property.public_remarks.blank? %>
-					<section>
-						<h2 class="section-title">Property Details</h2>
-						<p class="remarks"><%= property.public_remarks %></p>
-					</section>
-				<% end %>
+			<% end %>
+			<% if !@property.public_remarks.blank? %>
 				<section>
-					<h2 class="section-title">Single Family Home</h2>
-	        <ul>
-	          <% if !@property.sqft_total.blank? %><li><strong>Total Sq. Ft.</strong>: <span id='square_footage'><%=h @property.sqft_total %></span></li><% end %>
-	          <% if !@property.price_sqft.blank? %><li><strong>Price/Sq. Ft.</strong>: <span id='square_footage'><%=h number_to_currency @property.price_sqft %></span></li><% end %>
-	          <% if !@property.beds_total.blank? %><li><strong>Bedrooms</strong>: <%= @property.beds_total %></li><% end %>
-	          <% if !@property.baths.blank? %><li><strong>Baths</strong>: <%= @property.baths_full %> full <% if @property.baths_half != "" && @property.baths_half != "0" %> &amp; <%= @property.baths_half %> half baths<% end %></li><% end %>
-	          <% if !@property.acreage.blank? %><li><strong>Acreage</strong>: <%= @property.acreage %></li><% end %>
-	        </ul>
+					<h2 class="section-title">Property Details</h2>
+					<p class="remarks"><%= @property.public_remarks %></p>
 				</section>
-				<section>
-        	<h2 class="section-title">Features</h2>
-	        <ul>
-	          <% if !@property.interior_features.blank? %><li><strong>Interior</strong>: <%=   @property.interior_features %> </li><% end %>
-	          <% if !@property.cooling.blank?  %><li><strong>Cooling</strong>: <%=    @property.cooling  %> </li><% end %>
-	          <% if !@property.heating.blank?  %><li><strong>Heating</strong>: <%=    @property.heating  %> </li><% end %>
-	          <% if !@property.year_built.blank?   %><li><strong>Year Built</strong>: <%= @property.year_built   %> </li><% end %>
-	        </ul>
-        	<% if @property.virtual_tour1 %><p class="vt"><a class="btn" href='<%= @property.virtual_tour %>' target='_blank' title="Virtual Tour">Virtual Tour</a></p><% end %>
-				</section>
-			</div>
-		<% end %>
+			<% end %>
+			<section>
+				<h2 class="section-title">Single Family Home</h2>
+        <ul>
+          <% if !@property.sqft_total.blank? %><li><strong>Total Sq. Ft.</strong>: <span id='square_footage'><%=h @property.sqft_total %></span></li><% end %>
+          <% if !@property.price_sqft.blank? %><li><strong>Price/Sq. Ft.</strong>: <span id='square_footage'><%=h number_to_currency @property.price_sqft %></span></li><% end %>
+          <% if !@property.beds_total.blank? %><li><strong>Bedrooms</strong>: <%= @property.beds_total %></li><% end %>
+          <% if !@property.baths_full.blank? %><li><strong>Baths</strong>: <%= @property.baths_full %> full <% if @property.baths_half != "" && @property.baths_half != "0" %> &amp; <%= @property.baths_half %> half baths<% end %></li><% end %>
+          <% if !@property.acreage.blank? %><li><strong>Acreage</strong>: <%= @property.acreage %></li><% end %>
+        </ul>
+			</section>
+			<section>
+      	<h2 class="section-title">Features</h2>
+        <ul>
+          <% if !@property.interior_features.blank? %><li><strong>Interior</strong>: <%=   @property.interior_features %> </li><% end %>
+          <% if !@property.cooling.blank?  %><li><strong>Cooling</strong>: <%=    @property.cooling  %> </li><% end %>
+          <% if !@property.heating.blank?  %><li><strong>Heating</strong>: <%=    @property.heating  %> </li><% end %>
+          <% if !@property.year_built.blank?   %><li><strong>Year Built</strong>: <%= @property.year_built   %> </li><% end %>
+        </ul>
+      	<% if !@property.virtual_tour1.blank? %><p class="vt"><a class="btn" href='<%= @property.virtual_tour1 %>' target='_blank' title="Virtual Tour">Virtual Tour</a></p><% end %>
+			</section>
+		</div>
 	</div>
 	<aside class="sidebar">
 	    <section class="agent">
@@ -54,7 +56,7 @@
 	      <%= @property.city.titleize %>, <%= @property.state_or_province %> <%= @property.postal_code %>
 	    </address>
 	    <p class="current-price">
-	    	<%= number_to_currency(@property.current_price, :precision => 0) %>
+	    	<%= number_to_currency(@property.list_price, :precision => 0) %>
 	      <% if @property.foreclosure_yn == 'Y' %>
 	  			<span class='foreclosure'>(Foreclosure)</span>
 	      <% end %>
@@ -63,7 +65,7 @@
 		</section>
 		<section>
 			<h4 class="section-title">Directions</h4>
-			# <% if @property.street_number %>
+			<% if false && @property.street_number %>
 				<div class="property-map" id="map-<%= @property.id %>" data-address="<%= @property.street_number %> <%= @property.street_name.titleize %>"></div>
 			<% end %>
 	  	<p class="directions"><%= @property.directions %></p>
@@ -80,9 +82,9 @@
 		  </ul>
 	  </section>
 	  <% page_ids = Caboose::Page.where(:site_id => @site.id).pluck(:id).to_s.gsub("[","").gsub("]","") %>
-	  <% cf = Caboose::Block.where(:block_type_id => 401).where("page_id in (#{page_ids})").first %>
+	  <% cf = Caboose::Block.where(:name => 'to_address').where("page_id in (#{page_ids})").first %>
 	  <% if cf %>
-	  	<% bid = cf.id %>
+	  	<% bid = cf.parent_id %>
 		  <section>
 		  	<h4 class="section-title">Information Request</h4>
 			  <form id="property-contact-form">
@@ -101,27 +103,16 @@
 	</aside>
 </div>
 
-<script>
-var property_map_id = "map-<%= @property.id %>";
-var photo_gallery_id = "gallery-<%= @property.id %>";
 
-function loadScript() {
-  var script = document.createElement('script');
-  script.type = 'text/javascript';
-  script.src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyAjSs-Jq6hpuT35RG9wD6LuqaDFzYDCOPk&callback=show_property_map";
-  document.body.appendChild(script);
-}
-</script>
+	<script>
+	var property_map_id = "map-<%= @property.id %>";
+	var photo_gallery_id = "gallery-<%= @property.id %>";
 
-<script type="text/javascript">
-(function(d, s, id) {
-  window.Wishpond = window.Wishpond || {};
-  Wishpond.merchantId = '1285931';
-  Wishpond.writeKey = 'a69f26d8d7f4';
-  var js, wpjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//cdn.wishpond.net/connect.js";
-  wpjs.parentNode.insertBefore(js, wpjs);
-}(document, 'script', 'wishpond-connect'));
-</script>
+	function loadScript() {
+	  var script = document.createElement('script');
+	  script.type = 'text/javascript';
+	  script.src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyAjSs-Jq6hpuT35RG9wD6LuqaDFzYDCOPk&callback=show_property_map";
+	  document.body.appendChild(script);
+	}
+	</script>
+
